[package]
name = "rust_renju"
version = "0.1.0"
authors = ["Kyrylo Stepanov <k.stepanov@tutanota.com>"]
edition = "2021"
rust-version = "1.60"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown