[package]
name = "rust_renju"
version = "0.1.0"
authors = ["Kyrylo Stepanov <k.stepanov@tutanota.com>"]
edition = "2021"
rust-version = "1.60"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
confy = "0.4.0"
serde = { version = "1", features = ["derive"] }
bincode = { version = "1.3.3" } 
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
bufstream = "0.1.4"

# [features]
# default = []
# persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown